--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp",
+    "build": "gulp --production",
     "dev": "gulp --watch",
-    "package": "npm run build"
+    "pack": "npm run build && cd dist && nodec index.js"
   },
   "repository": {
     "type": "git",
@@ -58,11 +58,12 @@
     "@types/request": "^2.47.1",
     "@types/serve-index": "^1.7.29",
     "@types/socket.io": "^1.4.38",
-    "cross-env": "^5.2.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
     "gulp-typescript": "^5.0.0-alpha.3",
-    "typescript": "^3.0.3"
+    "typescript": "^3.0.3",
+    "yargs": "^12.0.2"
   },
   "engines": {
     "node": ">=4.0.0"
