--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "ts-loader": "^5.2.1",
     "typescript": "^3.0.3",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1"
+    "webpack-cli": "^3.1.1",
+    "tar": ">=2.2.2"
   },
   "engines": {
     "node": ">=4.0.0"
